{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 290,
  "lineage": "ea382014-1e6b-94b0-80d7-389fcb790560",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03deb8c961063af8c",
            "arn": "arn:aws:ec2:us-east-1:213401740863:instance/i-09cd8af638f1fa236",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cd8af638f1fa236",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vm1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07fbc04d906c74bf5"
              }
            ],
            "primary_network_interface_id": "eni-07fbc04d906c74bf5",
            "private_dns": "ip-10-0-1-115.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.115",
            "public_dns": "ec2-54-197-112-31.compute-1.amazonaws.com",
            "public_ip": "54.197.112.31",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Course": "Public Cloud Solution Architect",
                  "Creator": "Ali-G",
                  "ManagedBy": "Terraform",
                  "Project": "IaC deployment prep tasks"
                },
                "tags_all": {
                  "Course": "Public Cloud Solution Architect",
                  "Creator": "Ali-G",
                  "ManagedBy": "Terraform",
                  "Project": "IaC deployment prep tasks"
                },
                "throughput": 0,
                "volume_id": "vol-041ece562543cb84b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049da5e5e47c89d67",
            "tags": {
              "Name": "VM-1"
            },
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Name": "VM-1",
              "Project": "IaC deployment prep tasks"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00989f081889b2286"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "213401740863",
            "id": "i-09cd8af638f1fa236",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.vm1",
            "aws_security_group.instance_sg",
            "aws_subnet.s",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:internet-gateway/igw-0e0ac206455e0ebd0",
            "id": "igw-0e0ac206455e0ebd0",
            "owner_id": "213401740863",
            "region": "us-east-1",
            "tags": {
              "Name": "main-vpc-igw"
            },
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-igw",
              "Project": "IaC deployment prep tasks"
            },
            "vpc_id": "vpc-037f346c2675d0918"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:network-acl/acl-01b11b46215d5f57f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01b11b46215d5f57f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 125,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/24",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 150,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/24",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/24",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "213401740863",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-026284745288fb8b9",
              "subnet-0d1ae20e26919bb15"
            ],
            "tags": {
              "Name": "private-nacl"
            },
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Name": "private-nacl",
              "Project": "IaC deployment prep tasks"
            },
            "vpc_id": "vpc-037f346c2675d0918"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.s",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:network-acl/acl-08cee253f04510d9f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08cee253f04510d9f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 125,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "213401740863",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-018cbdff327417547",
              "subnet-049da5e5e47c89d67"
            ],
            "tags": {
              "Name": "public-nacl"
            },
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Name": "public-nacl",
              "Project": "IaC deployment prep tasks"
            },
            "vpc_id": "vpc-037f346c2675d0918"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.s",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:route-table/rtb-0cb8004780deeb5b3",
            "id": "rtb-0cb8004780deeb5b3",
            "owner_id": "213401740863",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0ac206455e0ebd0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-subnets-rt"
            },
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Name": "public-subnets-rt",
              "Project": "IaC deployment prep tasks"
            },
            "timeouts": null,
            "vpc_id": "vpc-037f346c2675d0918"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "213401740863",
            "id": "rtb-0cb8004780deeb5b3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dfc10b8dfa3ac68",
            "region": "us-east-1",
            "route_table_id": "rtb-0cb8004780deeb5b3",
            "subnet_id": "subnet-049da5e5e47c89d67"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.s",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dab5bda61c7c9ef9",
            "region": "us-east-1",
            "route_table_id": "rtb-0cb8004780deeb5b3",
            "subnet_id": "subnet-018cbdff327417547"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.s",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:security-group/sg-00989f081889b2286",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00989f081889b2286",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG for Instance",
            "name_prefix": "",
            "owner_id": "213401740863",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance-security-group"
            },
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Name": "instance-security-group",
              "Project": "IaC deployment prep tasks"
            },
            "timeouts": null,
            "vpc_id": "vpc-037f346c2675d0918"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "213401740863",
            "id": "sg-00989f081889b2286",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:subnet/subnet-0d1ae20e26919bb15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1ae20e26919bb15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "213401740863",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-private-1"
            },
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Name": "subnet-private-1",
              "Project": "IaC deployment prep tasks"
            },
            "vpc_id": "vpc-037f346c2675d0918"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "213401740863",
            "id": "subnet-0d1ae20e26919bb15",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:subnet/subnet-026284745288fb8b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026284745288fb8b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "213401740863",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-private-2"
            },
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Name": "subnet-private-2",
              "Project": "IaC deployment prep tasks"
            },
            "vpc_id": "vpc-037f346c2675d0918"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "213401740863",
            "id": "subnet-026284745288fb8b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:subnet/subnet-049da5e5e47c89d67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049da5e5e47c89d67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "213401740863",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-public-1"
            },
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Name": "subnet-public-1",
              "Project": "IaC deployment prep tasks"
            },
            "vpc_id": "vpc-037f346c2675d0918"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "213401740863",
            "id": "subnet-049da5e5e47c89d67",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:subnet/subnet-018cbdff327417547",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018cbdff327417547",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "213401740863",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-public-2"
            },
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Name": "subnet-public-2",
              "Project": "IaC deployment prep tasks"
            },
            "vpc_id": "vpc-037f346c2675d0918"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "213401740863",
            "id": "subnet-018cbdff327417547",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:vpc/vpc-037f346c2675d0918",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06dfe6aad884bbbd2",
            "default_route_table_id": "rtb-04a03f629ec05ec51",
            "default_security_group_id": "sg-056b6faad7d5c86d9",
            "dhcp_options_id": "dopt-03c407fe19236a19c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-037f346c2675d0918",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a03f629ec05ec51",
            "owner_id": "213401740863",
            "region": "us-east-1",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Name": "main-vpc",
              "Project": "IaC deployment prep tasks"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "213401740863",
            "id": "vpc-037f346c2675d0918",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:security-group-rule/sgr-0f380b8a4a38a4d14",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f380b8a4a38a4d14",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-00989f081889b2286",
            "security_group_rule_id": "sgr-0f380b8a4a38a4d14",
            "tags": null,
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Project": "IaC deployment prep tasks"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "213401740863",
            "id": "sgr-0f380b8a4a38a4d14",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:security-group-rule/sgr-02f9c695ae79bc63f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-02f9c695ae79bc63f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-00989f081889b2286",
            "security_group_rule_id": "sgr-02f9c695ae79bc63f",
            "tags": null,
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Project": "IaC deployment prep tasks"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "213401740863",
            "id": "sgr-02f9c695ae79bc63f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:security-group-rule/sgr-0820ca7f8ee184a6d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0820ca7f8ee184a6d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-00989f081889b2286",
            "security_group_rule_id": "sgr-0820ca7f8ee184a6d",
            "tags": null,
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Project": "IaC deployment prep tasks"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "213401740863",
            "id": "sgr-0820ca7f8ee184a6d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213401740863:security-group-rule/sgr-0776085e0234387a4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0776085e0234387a4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-00989f081889b2286",
            "security_group_rule_id": "sgr-0776085e0234387a4",
            "tags": null,
            "tags_all": {
              "Course": "Public Cloud Solution Architect",
              "Creator": "Ali-G",
              "ManagedBy": "Terraform",
              "Project": "IaC deployment prep tasks"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "213401740863",
            "id": "sgr-0776085e0234387a4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}